service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: main
          image: aoyako/service-main:latest
          ports:
            - containerPort: 8090
              name: profile
            - containerPort: 8091
              name: match
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
  labels:
    app: analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer
  template:
    metadata:
      labels:
        app: analyzer
    spec:
      containers:
        - name: main
          image: aoyako/service-analyzer:latest
          ports:
            - containerPort: 32001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: aoyako/service-chat:latest
          ports:
            - containerPort: 5566
              name: grpc
            - containerPort: 5567
              name: grpc-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsqlookupd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nsqlookupd
  template:
    metadata:
      labels:
        app: nsqlookupd
    spec:
      containers:
        - name: nsqlookupd
          image: nsqio/nsq
          command: ["/nsqlookupd"]
          ports:
            - containerPort: 4160
              name: one
            - containerPort: 4161
              name: two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsqd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nsqd
  template:
    metadata:
      labels:
        app: nsqd
    spec:
      containers:
        - name: nsqd
          image: nsqio/nsq
          command: ["/nsqd", "--broadcast-address=nsqd", "--lookupd-tcp-address=nsqlookupd:4160"]
          ports:
            - containerPort: 4151
              name: one
            - containerPort: 4150
              name: two
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: service-main
  labels:
    app: service-main
spec:
  selector:
    app: main
  ports:
    - name: profile
      port: 8090
    - name: match
      port: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: service-analyzer
  labels:
    app: service-analyzer
spec:
  selector:
    app: analyzer
  ports:
  - port: 32001
---
apiVersion: v1
kind: Service
metadata:
  name: service-chat
  labels:
    app: service-chat
spec:
  type: NodePort
  selector:
    app: chat
  ports:
    - name: grpc
      port: 5566
    - name: grpc-web
      port: 5567
---
apiVersion: v1
kind: Service
metadata:
  name: nsqlookupd
  labels:
    app: nsqlookupd
spec:
  selector:
    app: nsqlookupd
  ports:
    - name: one
      port: 4160
    - name: two
      port: 4161
---
apiVersion: v1
kind: Service
metadata:
  name: nsqd
  labels:
    app: nsqd
spec:
  selector:
    app: nsqd
  ports:
    - name: one
      port: 4151
    - name: two
      port: 4150
